@@ -4,7 +4,6 @@
 
 [common]
 DCPSInfoRepo=file://repo.ior
-DCPSBit=0
 
 [transport_impl_3]
 transport_type=multicast
